<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Blood Press</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_first_fragment" tools:ignore="DuplicateDefinition">Hello first fragment</string>
    <string name="hello_second_fragment" tools:ignore="DuplicateDefinition">Hello second fragment. Arg: %1$s</string>
    <string name="max_text">最高血圧</string>
    <string name="min_text">最低血圧</string>
    <string name="pulse_text">脈拍</string>
    <string name="save_text">保存</string>
    <string name="delete_text">削除</string>
</resources>
