<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text01"
        android:layout_marginTop="44dp"
        android:layout_marginLeft="44dp"
        android:text="@string/max_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        ></TextView>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/maxEdit"
        app:layout_constraintTop_toBottomOf="@id/text01"
        app:layout_constraintLeft_toLeftOf="@id/text01"
        android:layout_marginTop="16dp"
        android:gravity="right"
        ></EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/maxEdit"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@id/maxEdit"
        android:id="@+id/text02"
        android:text="@string/min_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        ></TextView>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/minEdit"
        app:layout_constraintTop_toBottomOf="@id/text02"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@id/text02"
        android:inputType="number"
        android:gravity="right"
        ></EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text03"
        app:layout_constraintTop_toBottomOf="@id/minEdit"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@id/minEdit"
        android:text="@string/pulse_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        ></TextView>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/pulseEdit"
        app:layout_constraintTop_toBottomOf="@id/text03"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@id/text03"
        android:inputType="number"
        android:gravity="right"
        ></EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/text03"
        android:layout_marginBottom="100dp"
        android:text="@string/save_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        ></Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deleteBtn"
        app:layout_constraintBottom_toBottomOf="@id/saveBtn"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="100dp"
        android:text="@string/delete_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        ></Button>

</androidx.constraintlayout.widget.ConstraintLayout>